# morph

./: .gitignore  CMakeLists.txt  README.md  TODO  install  main.cc  prepare.sh
client/: morphfs_client.cc  morphfs_client.h
common/: config.h  nocopy.h  rpc_args.h  types.h  utils.h
docs/: journal
docs/mds/: wal
docs/monitor/: paxos
docs/os/: overview  transaction
mds/: mdlog.cc  mdlog.h  mds.cc  mds.h  namenode.cc  namenode.h  request_cache.cc  request_cache.h
rpc/: rpc_wrapper.h
src/client/: morphfs_client.cc  morphfs_client.h
src/common/: blocking_queue.h  cluster.h  cluster_manager.h  coding.cc  coding.h  concurrent_queue.h  config.h  consistent_hash.cc  consistent_hash.h  crc.cc  crc.h  env.h  env_posix.cc  filename.cc  filename.h  logger.h  network.cc  network.h  nocopy.h  options.h  port.h  slice.h  status.cc  status.h  time.h  to_be_deleted.h  types.h  utils.h
src/mds/: config.h  inode.h  inode_directory.cc  inode_directory.h  inode_file.cc  inode_file.h  journal.cc  log_format.h  log_reader.cc  log_reader.h  log_writer.cc  log_writer.h  mds.cc  mds.h  namespace.cc  namespace.h  request_cache.h  service.cc  service.h  service_impl.cc  service_impl.h  write_batch.cc  write_batch.h  write_batch_internal.h
src/monitor/: cluster_manager.h  config.h  monitor.cc  monitor.h  paxos.cc  paxos.h  paxos_service.cc  paxos_service.h  persister.cc  persister.h  service_impl.cc  service_impl.h
src/os/: .kv_store.cc.swp  block_allocator.cc  block_allocator.h  block_store.cc  block_store.h  buffer.cc  buffer.h  error_code.h  journal.cc  journal.h  kv_store.cc  kv_store.h  mdstore.cc  mdstore.h  object.cc  object.h  object_store.cc  object_store.h  oss.cc  oss.h  service_impl.cc  service_impl.h  transaction.cc  transaction.h
src/protos/: mds.proto  monitor.proto  oss.proto
src/rpc/: rpc_wrapper.h
src/storage/: journal.cc  mdstore.cc  mdstore.h  storage.h
src/tests/: config.h  test.cc  third_party.cc  utils.h
src/tests/common/: consistent_hash_test.cc
src/tests/integration/: integration_test.cc
src/tests/mds/: namespace_test.cc
src/tests/monitor/: monitor_test.cc
src/tests/os/: block_store.cc  block_store_test.cc  object_store.cc  object_store_test.cc
src/tests/rpc/: client.cc  math.proto  server.cc
storage/: journal.cc  journal.h  mdstore.cc  mdstore.h  storage.cc  storage.h
tests/: test.cc  test.h  third_party.cc  utils.cc  utils.h
tests/integration/: cluster.h  integration_test.cc
tests/monitor/: monitor_test.cc
tests/os/: block_store_test.cc  object_store_test.cc
